--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -138,8 +138,38 @@ jobs:
         if: always()
         with:
           files: target/surefire-reports/*.xml
+      - name: Generate JaCoCo Badge
+        uses: cicirello/jacoco-badge-generator@v2
+        with:          
+          jacoco-csv-file: target/site/jacoco/jacoco.csv
+          badges-directory: .github/JaCoCo
+          generate-coverage-badge: true
+          coverage-badge-filename: jacoco.svg
+          generate-branches-badge: false
+          branches-badge-filename: branches.svg
+          colors: '#4c1 #97ca00 #a4a61d #dfb317 #fe7d37 #e05d44'
+          intervals: 100 90 80 70 60 0
+          on-missing-report: fail
+          fail-if-coverage-less-than: 0
+          fail-if-branches-less-than: 0
+          fail-on-coverage-decrease: false
+          fail-on-branches-decrease: false
+      - name: Log coverage percentage
+        run: |
+          echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+          echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"     
+      - name: Upload JaCoCo coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/   
+
+      - uses: codecov/codecov-action@v1
+        with:
+          file: ./**/target/site/jacoco/jacoco.xml
+          name: codecov          
           
       ######## Jest Test ########     
       - name: SonarCloud Scan
         #run: mvn -B sonar:sonar -Dsonar.host.url=http://3.143.240.138:9000 -Dsonar.projectKey=simple-java-maven-app  
-        run: mvn -B sonar:sonar -Dsonar.projectKey=TestApp -Dsonar.host.url=http://3.143.240.138:9000 -Dsonar.login=c9566aabdf84dc48f62c9aa84bbcac7c715df76e
+        run: mvn -B sonar:sonar -Dsonar.projectKey=TestApp -Dsonar.projectName=MavenJacocowithSonar -Dsonar.host.url=http://3.141.23.89:9000 -Dsonar.login=c9566aabdf84dc48f62c9aa84bbcac7c715df76e
